# Routers

./: README.md  meson.build
builddir/: .ninja_deps  .ninja_log  build.ninja  compile_commands.json
builddir/meson-info/: intro-buildoptions.json  intro-buildsystem_files.json  intro-dependencies.json  intro-installed.json  intro-projectinfo.json  intro-targets.json  meson-info.json
builddir/meson-logs/: meson-log.txt
builddir/meson-private/: cmd_line.txt  coredata.dat.prev
builddir/meson-private/cmake_dl/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  MesonTemp.sln  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  cmake_trace.txt
builddir/meson-private/cmake_m/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  MesonTemp.sln  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  cmake_trace.txt
builddir/meson-private/cmake_pthread/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  MesonTemp.sln  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  cmake_trace.txt
builddir/meson-private/cmake_winmm/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  MesonTemp.sln  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  cmake_trace.txt
builddir/subprojects/raylib/: fileAPI.json
builddir/subprojects/raylib/__CMake_build/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  CTestTestfile.cmake  build.ninja  cmake_install.cmake  cmake_trace.txt
builddir/subprojects/raylib/__CMake_build/examples/: cmake_install.cmake
src/: dk_geometry.c  dk_geometry.h  dk_gui.c  dk_gui.h  dk_link.h  dk_matrix.c  dk_matrix.h  dk_misc.c  dk_misc.h  dk_router.c  dk_router.h  dk_state.c  dk_state.h  main.c  main.c.bak
subprojects/nuklear/: meson.build
subprojects/nuklear/include/: raylib-nuklear.h
subprojects/raygui/: meson.build
subprojects/raygui/include/: raygui.h
subprojects/raylib/: meson.build
(+129 files in other folders)
